<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="ua.sergeimunovarov.tcalc.main.MainActivityViewModel" />
    </data>

    <TableLayout
        android:id="@+id/numpad"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:background="@color/white_ish"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="0.2"
            android:gravity="center_horizontal"
            android:padding="0dp">

            <Button
                android:id="@+id/btn_7"
                style="@style/StyleNumberButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="@{model::input}"
                android:text="@string/btn_7"
                tools:ignore="ButtonStyle"/>

            <Button
                android:id="@+id/btn_8"
                style="@style/StyleNumberButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="@{model::input}"
                android:text="@string/btn_8"
                tools:ignore="ButtonStyle"/>

            <Button
                android:id="@+id/btn_9"
                style="@style/StyleNumberButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="@{model::input}"
                android:text="@string/btn_9"
                tools:ignore="ButtonStyle"/>

            <Button
                android:id="@+id/btn_par"
                style="@style/StyleOperatorButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="@{() -> model.inputDoubleBrackets()}"
                android:text="@string/btn_double_parentheses"
                tools:ignore="ButtonStyle"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="0.2"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btn_4"
                style="@style/StyleNumberButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="@{model::input}"
                android:text="@string/btn_4"
                tools:ignore="ButtonStyle"/>

            <Button
                android:id="@+id/btn_5"
                style="@style/StyleNumberButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="@{model::input}"
                android:text="@string/btn_5"
                tools:ignore="ButtonStyle"/>

            <Button
                android:id="@+id/btn_6"
                style="@style/StyleNumberButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="@{model::input}"
                android:text="@string/btn_6"
                tools:ignore="ButtonStyle"/>

            <Button
                android:id="@+id/btn_divide"
                style="@style/StyleOperatorButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="@{model::input}"
                android:text="@string/btn_divide"
                tools:ignore="ButtonStyle"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="0.2"
            android:gravity="center_horizontal"
            android:padding="0dp">

            <Button
                android:id="@+id/btn_1"
                style="@style/StyleNumberButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:onClick="@{model::input}"
                android:text="@string/btn_1"
                tools:ignore="ButtonStyle"/>

            <Button
                android:id="@+id/btn_2"
                style="@style/StyleNumberButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="@{model::input}"
                android:text="@string/btn_2"
                tools:ignore="ButtonStyle"/>

            <Button
                android:id="@+id/btn_3"
                style="@style/StyleNumberButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="@{model::input}"
                android:text="@string/btn_3"
                tools:ignore="ButtonStyle"/>

            <Button
                android:id="@+id/btn_multiply"
                style="@style/StyleOperatorButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="@{model::input}"
                android:text="@string/btn_multiply"
                tools:ignore="ButtonStyle"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="0.2"
            android:gravity="center_horizontal"
            android:padding="0dp">

            <Button
                android:id="@+id/btn_col"
                style="@style/StyleNumberButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="@{model::input}"
                android:text="@string/btn_colon"
                tools:ignore="ButtonStyle"/>

            <Button
                android:id="@+id/btn_0"
                style="@style/StyleNumberButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="@{model::input}"
                android:text="@string/btn_0"
                tools:ignore="ButtonStyle"/>

            <Button
                android:id="@+id/btn_dot"
                style="@style/StyleNumberButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="@{model::input}"
                android:text="@string/btn_dot"
                tools:ignore="ButtonStyle"/>

            <Button
                android:id="@+id/btn_minus"
                style="@style/StyleOperatorButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="@{model::input}"
                android:text="@string/btn_minus"
                tools:ignore="ButtonStyle"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="0.2"
            android:gravity="center_horizontal"
            android:padding="0dp">

            <Button
                android:id="@+id/btn_clear"
                style="@style/StyleControlButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="@{() -> model.clear()}"
                android:text="@string/btn_clear"
                tools:ignore="ButtonStyle"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_del"
                style="@style/StyleControlButton.Backspace"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="@{() -> model.delete()}"
                app:srcCompat="@drawable/ic_backspace"
                app:repeatInterval="@{100}"
                tools:ignore="ButtonStyle"/>

            <Button
                android:id="@+id/btn_eq"
                style="@style/StyleControlButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="@{() -> model.calculate()}"
                android:text="@string/btn_calculate"
                tools:ignore="ButtonStyle"/>

            <Button
                android:id="@+id/btn_plus"
                style="@style/StyleOperatorButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="@{model::input}"
                android:text="@string/btn_plus"
                tools:ignore="ButtonStyle"/>
        </TableRow>
    </TableLayout>
</layout>
