...
                        bind:inAnimation="@{@anim/slide_in_right}"
                        bind:outAnimation="@{@anim/slide_out_left}" />

                </HorizontalScrollView>

                <ua.sergeimunovarov.tcalc.main.views.CustomEditText
                    android:id="@+id/input"
                    style="@style/InputStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_above="@id/scroll_textView"
                    android:hint="@string/hint_expression"
...
