...
        android:background="@color/white"
        android:elevation="6dp"
        app:behavior_hideable="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/history_entries"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:visibility="@{model.mEntries.size() > 0 ? View.VISIBLE : View.GONE}"
            app:dividerItemDecorator="@{DividerItemDecoration.VERTICAL}"
            app:historyItems="@{model.mEntries}"
...
            android:visibility="@{model.mEntries.size() == 0 ? View.VISIBLE : View.GONE}">

            <ImageView
                android:layout_width="@dimen/history_icon_size"
                android:layout_height="@dimen/history_icon_size"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/label_history_empty"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ic_history" />

            <TextView
                android:id="@+id/empty_view"
                android:layout_width="wrap_content"
...
