...
            android:text="@{model.mResultFormat}"
            bind:inAnimation="@{@anim/fade_in}"
            bind:outAnimation="@{@anim/fade_out}"
            tools:text="HH:MM:SS"/>

        <ImageButton
            android:id="@+id/btn_history_toggle"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_toLeftOf="@+id/btn_copy"
            android:layout_toStartOf="@+id/btn_copy"
...
